Header links and link fix

--- a/index.html
+++ b/index.html
@@ -11,13 +11,42 @@
 <body>
     <section class="section">
         <div class="container" style="max-width: 768px">
-            <div>
-                <nav class="breadcrumb has-bullet-separator" style="margin: 0; display: inline-block" aria-label="breadcrumbs">
-                    <ul>
-                        <li><a href="https://willbanders.dev">WillBAnders</a></li>
-                        <li class="is-active"><a href="#" aria-current="page">Blog</a></li>
-                    </ul>
-                </nav>
+            <div class="level is-mobile" style="margin: 0">
+                <div class="level-left">
+                    <nav class="breadcrumb has-bullet-separator" style="margin: 0; display: inline-block" aria-label="breadcrumbs">
+                        <ul>
+                            <li><a href="https://willbanders.dev">WillBAnders</a></li>
+                            <li class="is-active"><a href="#" aria-current="page">Blog</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="level-right">
+                    <div class="level-item">
+                        <a class="button is-hidden-mobile" href="https://github.com/WillBAnders">
+                            <span class="icon is-medium">
+                                <i class="fab fa-lg fa-github"></i>
+                            </span>
+                            <span class="is-hidden-mobile">GitHub</span>
+                        </a>
+                        <a class="button is-hidden-tablet" href="https://github.com/WillBAnders">
+                            <span class="icon is-medium">
+                                <i class="fab fa-lg fa-github"></i>
+                            </span>
+                        </a>
+                        &nbsp;
+                        <a class="button is-hidden-mobile" href="https://discord.gg/gm96xd8">
+                            <span class="icon is-medium">
+                                <i class="fab fa-lg fa-discord"></i>
+                            </span>
+                            <span class="is-hidden-mobile">Discord</span>
+                        </a>
+                        <a class="button is-hidden-tablet" href="https://discord.gg/gm96xd8">
+                            <span class="icon is-medium">
+                                <i class="fab fa-lg fa-discord"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="dropdown-divider" style="margin-bottom: 16px"></div>
             <div class="content">
@@ -32,7 +61,7 @@
                 </p>
                 <p>If you're interested in discussing anything in this blog, feel free to email me (<code class="has-text-dark">WillBAnders@gmail.com</code>)
                     or tag me in the <code class="has-text-dark">#blog</code>
-                    channel of my <a href="https://rhovas.dev">Discord</a> server.</p>
+                    channel of my <a href="https://discord.gg/gm96xd8">Discord</a> server.</p>
             </div>
             <div class="dropdown-divider" style="margin-top: 16px"></div>
         </div>
