--- a/index.html
+++ b/index.html
@@ -11,39 +11,32 @@
 <body>
     <section class="section">
         <div class="container" style="max-width: 768px">
-            <div class="level is-mobile" style="margin: 0">
+            <div class="level" style="margin: 0">
                 <div class="level-left">
-                    <nav class="breadcrumb has-bullet-separator" style="margin: 0; display: inline-block" aria-label="breadcrumbs">
-                        <ul>
-                            <li><a href="https://willbanders.dev">WillBAnders</a></li>
-                            <li class="is-active"><a href="#" aria-current="page">Blog</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="level-right">
                     <div class="level-item">
-                        <a class="button is-hidden-mobile" href="https://github.com/WillBAnders">
+                        <img src="./images/logo.png" alt="Logo" width="24" height="24" style="margin-right: 8px">
+                        <nav class="breadcrumb has-bullet-separator" style="margin: 0; display: inline-block" aria-label="breadcrumbs">
+                            <ul>
+                                <li><a href="https://willbanders.dev">WillBAnders</a></li>
+                                <li class="is-active"><a href="#" aria-current="page">Blog</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="level-right" style="margin-top: 8px">
+                    <div class="level-item">
+                        <a class="button" href="https://github.com/WillBAnders">
                             <span class="icon is-medium">
                                 <i class="fab fa-lg fa-github"></i>
                             </span>
-                            <span class="is-hidden-mobile">GitHub</span>
-                        </a>
-                        <a class="button is-hidden-tablet" href="https://github.com/WillBAnders">
-                            <span class="icon is-medium">
-                                <i class="fab fa-lg fa-github"></i>
-                            </span>
+                            <span>GitHub</span>
                         </a>
                         &nbsp;
-                        <a class="button is-hidden-mobile" href="https://discord.gg/gm96xd8">
+                        <a class="button" href="https://discord.gg/gm96xd8">
                             <span class="icon is-medium">
                                 <i class="fab fa-lg fa-discord"></i>
                             </span>
-                            <span class="is-hidden-mobile">Discord</span>
-                        </a>
-                        <a class="button is-hidden-tablet" href="https://discord.gg/gm96xd8">
-                            <span class="icon is-medium">
-                                <i class="fab fa-lg fa-discord"></i>
-                            </span>
+                            <span>Discord</span>
                         </a>
                     </div>
                 </div>
