Publish "A Case for Properties"

--- a/index.html
+++ b/index.html
@@ -56,6 +56,39 @@
                     or tag me in the <code class="has-text-dark">#blog</code>
                     channel of my <a href="https://discord.gg/gm96xd8">Discord</a> server.</p>
             </div>
+            <div class="dropdown-divider" style="margin-bottom: 16px"></div>
+            <article class="content">
+                <div class="level">
+                    <div class="level-left">
+                        <h2 id="a-case-for-properties" class="level-item title is-size-3" style="margin: 0">
+                            <a href="./articles/a-case-for-properties.html">A Case for Properties</a>
+                        </h2>
+                    </div>
+                    <div class="level-right" style="margin: 0">
+                        <div class="level-item">
+                            <div class="is-hidden-mobile has-text-right" style="display: block; line-height: 1.25rem;">
+                                <span class="is-size-5">November 15, 2020</span><br>
+                                <span class="is-size-6"><em>~12m read time</em></span>
+                            </div>
+                            <div class="is-hidden-tablet has-text-centered" style="display: block; margin-top: 0.5rem; line-height: 1.25rem;">
+                                <span class="is-size-5">November 15, 2020</span><br>
+                                <span class="is-size-6"><em>~12m read time</em></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>Properties are a really nice feature of modern languages, and I've recently
+                    gotten attached to them in Kotlin. For a while
+                    I wasn't comfortable with the idea of 'fields' performing arbitrary computation,
+                    but having used them for a few months now I'm really enjoying the simplicity -
+                    <em>especially</em> when moving back to Java!</p>
+                <p>Having given it some thought, I wanted to lay out a case in support of
+                    properties which highlights their benefits over directly accessing fields (which
+                    is mostly about getters/setters, but nonetheless), and how we can establish some
+                    guidelines on when properties should not be used to avoid the issue of
+                    arbitrary computation causing side effects or other unexpected behavior.</p>
+                <p style="width: 100%; text-align: center"><a href="./articles/a-case-for-properties.html">Continue reading...</a></p>
+            </article>
             <div class="dropdown-divider" style="margin-top: 16px"></div>
         </div>
     </section>
