Favicon and title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blake Anderson's Blog</title>
+    <title>Blake Anderson | Blog</title>
     <meta name="description" content="Blog posts on programming language design.">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
 </head>
@@ -44,7 +45,7 @@
             <div class="dropdown-divider" style="margin-bottom: 16px"></div>
             <div class="content">
                 <div class="has-text-centered">
-                    <h2 class="title is-size-4">Oh hi there, I'm Blake Anderson</h2>
+                    <h2 class="title is-size-4">Hi there, I'm Blake Anderson</h2>
                     <!--And this blog is about me, Blake Anderson-->
                 </div>
                 <p></p>
