Publish "Software Testing and Practical Applications"
Just a recording of a presentation from BarCamp 2023.

--- a/index.html
+++ b/index.html
@@ -49,15 +49,43 @@
                     <!--And this blog is about me, Blake Anderson-->
                 </div>
                 <p></p>
-                <p>This blog documents things I've learned about programming language design with <a href="https://rhovas.dev">Rhovas</a>,
-                    a language for API design and enforcement. Resources on language design are hard to come by, and I hope that writing
-                    down my research and justification for my decisions will help other language creators as well.
+                <p>This blog documents things I've learned about software development and programming languages, largely
+                    through my work on <a href="https://rhovas.dev">Rhovas</a>. Resources on language design are rare,
+                    so I hope documenting my thoughts on software and specific decisions I've made with Rhovas will help
+                    other developers as well.
                 </p>
                 <p>If you're interested in discussing anything in this blog, feel free to email me (<code class="has-text-dark">WillBAnders@gmail.com</code>)
                     or tag me in the <code class="has-text-dark">#blog</code>
                     channel of my <a href="https://discord.gg/gm96xd8">Discord</a> server.</p>
             </div>
             <div class="dropdown-divider" style="margin-bottom: 16px"></div>
+            <article class="content">
+                <div class="level">
+                    <div class="level-left">
+                        <h2 id="software-testing-and-practical-applications" class="level-item title is-size-3" style="margin: 0">
+                            <a href="./articles/software-testing-and-practical-applications.html">Software Testing & Practical Applications</a>
+                        </h2>
+                    </div>
+                    <div class="level-right" style="margin: 0">
+                        <div class="level-item">
+                            <div class="is-hidden-mobile has-text-right" style="display: block; line-height: 1.25rem;">
+                                <span class="is-size-5">March 25, 2023</span><br>
+                                <span class="is-size-6"><em>30m watch time</em></span>
+                            </div>
+                            <div class="is-hidden-tablet has-text-centered" style="display: block; margin-top: 0.5rem; line-height: 1.25rem;">
+                                <span class="is-size-5">March 25, 2023</span><br>
+                                <span class="is-size-6"><em>30m watch time</em></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>This weekend I gave a talk at GNV BarCamp, an ad-hoc 'unconference' where attendees propose
+                presentation topics at the event, on software testing. Consequently, it's not that's polished but is a
+                fair overview on software testing covering unit/integration tests, Test Driven Development (TDD) and
+                Design by Contract, mocking, and multiple case studies from personal experience.</p>
+                <p style="width: 100%; text-align: center"><a href="./articles/software-testing-and-practical-applications.html">Watch on my blog...</a>
+                | <a href="https://youtu.be/RZ246XRLNbs">Watch on YouTube...</a></p>
+            </article>
             <article class="content">
                 <div class="level">
                     <div class="level-left">
