Publish "Rhovas: API Design & Enforcement"
Recording from a presentation on Rhovas for SSD.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,34 @@
             <article class="content">
                 <div class="level">
                     <div class="level-left">
+                        <h2 id="rhovas-api-design-and-enforcement" class="level-item title is-size-3" style="margin: 0">
+                            <a href="./articles/rhovas-api-design-and-enforcement.html">Rhovas: API Design & Enforcement</a>
+                        </h2>
+                    </div>
+                    <div class="level-right" style="margin: 0">
+                        <div class="level-item">
+                            <div class="is-hidden-mobile has-text-right" style="display: block; line-height: 1.25rem;">
+                                <span class="is-size-5">March 28, 2023</span><br>
+                                <span class="is-size-6"><em>1h30m watch time</em></span>
+                            </div>
+                            <div class="is-hidden-tablet has-text-centered" style="display: block; margin-top: 0.5rem; line-height: 1.25rem;">
+                                <span class="is-size-5">March 28, 2023</span><br>
+                                <span class="is-size-6"><em>1h30m watch time</em></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>This week I gave an introductory talk on <a href="https://rhovas.dev">Rhovas</a> for the Society of
+                    Software Developers (SSD) at the University of Florida. Rhovas is a new programming language I've
+                    been working on focused on API design and enforcement for library development. This presentation
+                    covers the motivation/philosophy of Rhovas as well as a handful of examples for notable language
+                    features (subject to change).</p>
+                <p style="width: 100%; text-align: center"><a href="./articles/software-testing-and-practical-applications.html">Watch on my blog...</a>
+                    | <a href="https://youtu.be/7GLrMe_Soxo">Watch on YouTube...</a></p>
+            </article>
+            <article class="content">
+                <div class="level">
+                    <div class="level-left">
                         <h2 id="software-testing-and-practical-applications" class="level-item title is-size-3" style="margin: 0">
                             <a href="./articles/software-testing-and-practical-applications.html">Software Testing & Practical Applications</a>
                         </h2>
