--- a/index.html
+++ b/index.html
@@ -62,6 +62,41 @@
             <article class="content">
                 <div class="level">
                     <div class="level-left">
+                        <h2 id="five-years-of-rhovas" class="level-item title is-size-3" style="margin: 0">
+                            <a href="./articles/five-years-of-rhovas.html">Five Years of Rhovas</a>
+                        </h2>
+                    </div>
+                    <div class="level-right" style="margin: 0">
+                        <div class="level-item">
+                            <div class="is-hidden-mobile has-text-right" style="display: block; line-height: 1.25rem;">
+                                <span class="is-size-5">July 11, 2023</span><br>
+                                <span class="is-size-6"><em>~10m read time</em></span>
+                            </div>
+                            <div class="is-hidden-tablet has-text-centered" style="display: block; margin-top: 0.5rem; line-height: 1.25rem;">
+                                <span class="is-size-5">July 11, 2023</span><br>
+                                <span class="is-size-6"><em>~10m read time</em></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>Today marks the 5th anniversary of Rhovas! Five years ago, I outlined the first steps for what I
+                    wanted to create with a new programming language. Rhovas has come quite far from those original
+                    notes, so I thought it'd be a good idea to reflect a bit on the past five years and see how things
+                    have gone.</p>
+                <p>Additionally, to commemorate the day Rhovas now has an initial <code class="has-text-dark">v0.0.1</code>
+                    release! This is largely to know what's active on the online editor, but over time this will
+                    approach a full <code class="has-text-dark">v1</code> release and come with more compatibility
+                    guarantees. You can review the <a href="https://github.com/Rhovas/Interpreter/releases/tag/v0.1.2">Release Notes</a>
+                    for a changelog and details on our versioning approach.</p>
+                <p>Finally, in combination with this release I've updated contributing guidelines to show issues (and
+                    PRs) are now accepted. I'm comfortable with the current direction of the language/compiler where
+                    contributions are manageable, and the language is stable enough where building programs and
+                    identifying bugs is highly valuable. If you're interested in helping, see <a href="./articles/five-years-of-rhovas.html#how-can-i-help">FAQ: How can I help?</a>.</p>
+                <p style="width: 100%; text-align: center"><a href="./articles/five-years-of-rhovas.html">Continue reading...</a></p>
+            </article>
+            <article class="content">
+                <div class="level">
+                    <div class="level-left">
                         <h2 id="rhovas-api-design-and-enforcement" class="level-item title is-size-3" style="margin: 0">
                             <a href="./articles/rhovas-api-design-and-enforcement.html">Rhovas: API Design & Enforcement</a>
                         </h2>
